# kobo-cloud-sync

./: .env.example  .gitignore  README.md  chatgpt-app-submission.json  pyproject.toml  skill-progression-map.md
skills/kobo-cloud-sync/: SKILL.md
src/kobo_cloud_sync/: __init__.py  cli.py  config.py  export_flow.py  login.py  models.py  parser.py  publisher.py  state.py  web.py  web_forms.py  web_jobs.py
tests/: test_cli.py  test_config.py  test_export_flow.py  test_login.py  test_parser.py  test_state.py  test_web.py  test_web_forms.py  test_web_jobs.py
