[project]
name = "kobo-cloud-sync"
version = "0.1.0"
description = "Sync Kobo cloud library metadata, covers, and highlights to Markdown"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Gawain Chin"},
]
keywords = ["kobo", "ebooks", "highlights", "markdown", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "playwright",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
kobo-cloud = "kobo_cloud_sync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
